feat(auth): add security components